# Calculator-with-SCT

./: .gitignore  CMakeLists.txt  README.md
src/: Calculator.cpp  Calculator.hpp  CalculatorWindow.cpp  CalculatorWindow.hpp  main.cpp
src/forms/: CalculatorWindow.ui
src/sct/: SctServer.cmake  SctServer.cpp  SctServer.hpp  connect_calculator.py  test_Calculator.py  test_connection.py
src/ut/: main.cpp  test_Calculator.cpp
